test-package-compiler/tests/snapshots/compiler_tests__ws_stdlib_nil_object_semantic.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Semantic errors (1):
  - Undefined variable: value
